--- a/delivery/chart/templates/serviceaccount.yaml
+++ b/delivery/chart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "podtatoserver.serviceAccountName" . }}
+  name: {{ include "podtato-head.serviceAccountName" . }}
   labels:
-    {{- include "podtatoserver.labels" . | nindent 4 }}
+    {{- include "podtato-head.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
