--- a/delivery/chart/values.yaml
+++ b/delivery/chart/values.yaml
@@ -1,18 +1,44 @@
-# Default values for podtatoserver.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-replicaCount: 1
-
-image:
-  repository: ghcr.io/podtato-head/podtatoserver
-  pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.1.0"
-
-imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+# applies to all deployments in this chart
+replicaCount: 1
+images:
+  repositoryDirname: ghcr.io/podtato-head
+  pullPolicy: IfNotPresent
+  pullSecrets: []
+
+# keep ports in sync with podtato-services/main/pkg/provider.go
+main:
+  repositoryBasename: podtato-main
+  tag: "v1-latest-dev"
+  serviceType: LoadBalancer
+  servicePort: 9000
+hats:
+  repositoryBasename: podtato-hats
+  tag: "v1-latest-dev"
+  serviceType: ClusterIP
+  servicePort: 9001
+leftLeg:
+  repositoryBasename: podtato-left-leg
+  tag: "v1-latest-dev"
+  serviceType: ClusterIP
+  servicePort: 9002
+leftArm:
+  repositoryBasename: podtato-left-arm
+  tag: "v1-latest-dev"
+  serviceType: ClusterIP
+  servicePort: 9003
+rightLeg:
+  repositoryBasename: podtato-right-leg
+  tag: "v1-latest-dev"
+  serviceType: ClusterIP
+  servicePort: 9004
+rightArm:
+  repositoryBasename: podtato-right-arm
+  tag: "v1-latest-dev"
+  serviceType: ClusterIP
+  servicePort: 9005
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -38,10 +64,7 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
-service:
-  type: ClusterIP
-  port: 9000
-
+# applies to podtato-main deployment only
 ingress:
   enabled: false
   annotations: {}
