--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,6 @@ on:
     branches:
       - 'main'
       - 'release-*'
-
   pull_request:
     branches:
       - 'main'
@@ -16,16 +15,12 @@ env:
   TRIVY_IGNORE_UNFIXED: true
   TRIVY_VULN_TYPE: 'os,library'
   TRIVY_SEVERITY: 'CRITICAL,HIGH'
-  
+
 defaults:
   run:
     shell: bash
 
 jobs:
-
-  ################
-  ## gather info
-  ################
 
   # prepare_ci_run gathers info about the commit
   prepare_ci_run:
@@ -40,30 +35,24 @@ jobs:
       DATE: ${{ steps.get_datetime.outputs.DATE }}
       TIME: ${{ steps.get_datetime.outputs.TIME }}
       DATETIME: ${{ steps.get_datetime.outputs.DATETIME }}
-
     steps:
       - name: Check out code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # need to checkout "all commits" for certain features to work (e.g., get all changed files)
-
       - name: Extract branch name
         id: extract_branch
-        # see https://github.com/keptn/gh-action-extract-branch-name for details
         uses: keptn/gh-action-extract-branch-name@main
-
       - name: 'Get Previous tag'
         id: get_previous_tag
         uses: "WyriHaximus/github-action-get-previous-tag@v1.1"
         with:
           fallback: "0.0.1"
-
       - name: 'Get next patch version'
         id: get_next_semver_tag
         uses: "WyriHaximus/github-action-next-semvers@v1.1"
         with:
           version: ${{ steps.get_previous_tag.outputs.tag }}
-
       - name: Get the version
         id: get_version
         env:
@@ -92,7 +81,6 @@ jobs:
           echo "VERSION=${VERSION}"
 
           echo "##[set-output name=VERSION;]$(echo ${VERSION})"
-
       - name: Get current date and time
         id: get_datetime
         run: |
@@ -100,10 +88,7 @@ jobs:
           echo "::set-output name=TIME::$(date +'%H%M')"
           echo "::set-output name=DATETIME::$(date +'%Y%m%d')$(date +'%H%M')"
 
-  ##################
-  ## Verify code
-  ################## 
-
+  ## lint_go_code statically analyzes go code in the commit
   lint_go_code:
     strategy:
       matrix:
@@ -120,12 +105,8 @@ jobs:
           version: v1.29
           working-directory: podtato-services/${{ matrix.component }}
 
-  ##################
-  ## Build images
-  ################## 
-
-  ## container_build_fork builds and pushes images from a fork
-  container_build_fork:
+  ##  container_build builds and pushes images for any fork
+  container_build:
     needs: [prepare_ci_run, lint_go_code]
     strategy:
       matrix:
@@ -140,22 +121,19 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
-
-      - name: Build for current fork
+      - name: Build image and push to current fork
         id: docker_build_fork
         uses: docker/build-push-action@v2
         with:
           build-args: |
             VERSION=${{ matrix.version }}
           context: podtato-services/${{ matrix.component }}/.
-          push: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
           file: podtato-services/${{ matrix.component }}/docker/Dockerfile
           platforms: linux/amd64
           tags: |
@@ -163,6 +141,8 @@ jobs:
             ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-${{ env.VERSION }}
 
   ## container_build_main builds, signs, pushes, and scans images from main repo
+  ## the repo path targeted by container_build_main doesn't include `cncf` in
+  ##   the path like the path for container_build
   container_build_main:
     if: github.repository_owner == 'cncf'
     needs: [prepare_ci_run,lint_go_code]
@@ -179,11 +159,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-
       - uses: sigstore/cosign-installer@main
         with:
           cosign-release: 'v1.0.0'
-
       - name: Login to GitHub Container Registry
         if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
         uses: docker/login-action@v1
@@ -191,7 +169,6 @@ jobs:
           registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
-
       - name: Build for main
         id: docker_build_main
         uses: docker/build-push-action@v2
@@ -205,7 +182,6 @@ jobs:
           tags: |
             ${{ env.CONTAINER_REGISTRY }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-latest-dev
             ${{ env.CONTAINER_REGISTRY }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-${{ env.VERSION }}
-
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -215,66 +191,39 @@ jobs:
           ignore-unfixed: '${{ env.TRIVY_IGNORE_UNFIXED }}'
           vuln-type: '${{ env.TRIVY_VULN_TYPE }}'
           severity: '${{ env.TRIVY_SEVERITY }}'
-
       - name: Sign Container
         if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         run: cosign sign -key .github/workflows/cosign.key -a GIT_HASH=${{ env.GIT_SHA }} -a VERSION=${{ needs.prepare_ci_run.outputs.VERSION }} ${{ env.CONTAINER_REGISTRY }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-${{ env.VERSION }}
 
-  ##################
-  ## Test deliveries
-  ##################
-
-  ## kubectl
-  ## TODO: enable this to work with containers built in a fork
-  ##       at the moment the image names are hard-coded to main's repos
-  ##       in the manifest
-  test_kubectl_deployment:
-    name: Test single kubectl deployment
-    needs: [prepare_ci_run, container_build_main]
+  ## test kubectl
+  test_kubectl_delivery:
+    name: Deliver with kubectl
+    needs: [prepare_ci_run, container_build]
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
     env:
       VERSION: ${{ needs.prepare_ci_run.outputs.VERSION }}
     steps:
-
       - name: Checkout repo
         uses: actions/checkout@v2
-
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
-
       - name: Test delivery with kubectl
-        run: |
-          namespace=podtato-kubectl
-          sed "s/latest-dev/${{ env.VERSION }}/g" delivery/kubectl/manifest.yaml | kubectl apply -f -
-          kubectl get deployments --namespace=${namespace} --output wide
+        run: ./delivery/kubectl/test.sh "${{ github.repository_owner }}" "${{ env.VERSION }}"
  
-  test_helm_deployment:
-    name: Test single Helm deployment
-    needs: [prepare_ci_run, container_build_fork]
+  ## test helm
+  test_helm_delivery:
+    name: Deliver with Helm
+    needs: [prepare_ci_run, container_build]
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
     env:
       VERSION: ${{ needs.prepare_ci_run.outputs.VERSION }}
     steps:
-
       - name: Checkout repo
         uses: actions/checkout@v2
-
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
-
       - name: Test delivery with helm
-        run: |
-          namespace=podtato-helm
-          kubectl create namespace ${namespace}
-          kubectl config set-context --current --namespace=${namespace}
-          helm install podtato-head ./delivery/chart \
-            --set images.repositoryDirname=${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head
-          echo "----> main deployment:"
-          kubectl get deployment --selector 'app.kubernetes.io/component=podtato-head-main' --output yaml
-          echo "----> wait for ready"
-          kubectl wait --for=condition=ready pod --timeout=30s \
-            --selector app.kubernetes.io/component=podtato-head-main --namespace=${namespace}
+        run: ./delivery/chart/test.sh "${{ github.repository_owner }}" "${{ env.VERSION }}"
