use custom secret for main container build, add pull secret to test cluster (#95)
* use custom secret for main container build

* use ghcr secret in kind cluster

* fixes

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -168,7 +168,7 @@ jobs:
         with:
           registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.repository_owner }}
-          password: ${{ github.token }}
+          password: ${{ secrets.CR_PAT }}
       - name: Build for main
         id: docker_build_main
         uses: docker/build-push-action@v2
@@ -202,6 +202,7 @@ jobs:
     name: Deliver with kubectl
     needs: [prepare_ci_run, container_build]
     runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
     env:
       VERSION: ${{ needs.prepare_ci_run.outputs.VERSION }}
     steps:
@@ -210,7 +211,7 @@ jobs:
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with kubectl
-        run: ./delivery/kubectl/test.sh "${{ github.repository_owner }}" "${{ env.VERSION }}"
+        run: ./delivery/kubectl/test.sh "${{ github.repository_owner }}" "${{ github.token }}" "${{ env.VERSION }}"
  
   ## test helm
   test_helm_delivery:
@@ -226,4 +227,4 @@ jobs:
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with helm
-        run: ./delivery/chart/test.sh "${{ github.repository_owner }}" "${{ env.VERSION }}"
+        run: ./delivery/chart/test.sh "${{ github.repository_owner }}" "${{ github.token }}" "${{ env.VERSION }}"
