--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,6 +10,9 @@ on:
       - 'main'
       - 'release-*'
 
+permissions:
+  packages: read|write
+
 env:
   CONTAINER_REGISTRY: ghcr.io
   TRIVY_IGNORE_UNFIXED: true
