--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -105,48 +105,9 @@ jobs:
           version: v1.29
           working-directory: podtato-services/${{ matrix.component }}
 
-  ##  container_build builds and pushes images for any fork
+  ## container_build builds, signs, pushes, and scans images
   container_build:
-    if: github.repository_owner != 'cncf'
     needs: [prepare_ci_run, lint_go_code]
-    strategy:
-      matrix:
-        component: [ "left-leg", "right-leg", "left-arm", "right-arm", "hats", "main" ]
-        version: [ "v1", "v2", "v3", "v4" ]
-    runs-on: ubuntu-20.04
-    env:
-      BRANCH: ${{ needs.prepare_ci_run.outputs.BRANCH }}
-      VERSION: ${{ needs.prepare_ci_run.outputs.VERSION }}
-      DATETIME: ${{ needs.prepare_ci_run.outputs.DATE }}${{ needs.prepare_ci_run.outputs.TIME }}
-      GIT_SHA: ${{ needs.prepare_ci_run.outputs.GIT_SHA }}
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.CONTAINER_REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ github.token }}
-      - name: Build image and push to current fork
-        id: docker_build_fork
-        uses: docker/build-push-action@v2
-        with:
-          build-args: |
-            VERSION=${{ matrix.version }}
-          context: podtato-services/${{ matrix.component }}/.
-          file: podtato-services/${{ matrix.component }}/docker/Dockerfile
-          platforms: linux/amd64
-          tags: |
-            ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-latest-dev
-            ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-${{ env.VERSION }}
-
-  ## container_build_main builds, signs, pushes, and scans images from main repo
-  ## the repo path targeted by container_build_main doesn't include `cncf` in
-  ##   the path like the path for container_build
-  container_build_main:
-    if: github.repository_owner == 'cncf'
-    needs: [prepare_ci_run,lint_go_code]
     strategy:
       matrix:
         component: [ "left-leg", "right-leg", "left-arm", "right-arm", "hats", "main" ]
@@ -164,13 +125,34 @@ jobs:
         with:
           cosign-release: 'v1.0.0'
       - name: Login to GitHub Container Registry
-        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
+        if: github.repository_owner == 'cncf'
         uses: docker/login-action@v1
         with:
           registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
+      - name: Login to GitHub Container Registry
+        if: github.repository_owner != 'cncf'
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.CONTAINER_REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
+      - name: Build for fork
+        if: github.repository_owner != 'cncf'
+        id: docker_build_fork
+        uses: docker/build-push-action@v2
+        with:
+          build-args: |
+            VERSION=${{ matrix.version }}
+          context: podtato-services/${{ matrix.component }}/.
+          file: podtato-services/${{ matrix.component }}/docker/Dockerfile
+          platforms: linux/amd64
+          tags: |
+            ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-latest-dev
+            ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-${{ env.VERSION }}
       - name: Build for main
+        if: github.repository_owner == 'cncf'
         id: docker_build_main
         uses: docker/build-push-action@v2
         with:
