--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -125,21 +125,21 @@ jobs:
         with:
           cosign-release: 'v1.0.0'
       - name: Login to GitHub Container Registry
-        if: github.repository_owner == 'cncf'
+        if: github.repository_owner == 'cncf' || github.event.action == 'pull_request'
         uses: docker/login-action@v1
         with:
           registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
       - name: Login to GitHub Container Registry
-        if: github.repository_owner != 'cncf'
+        if: github.repository_owner != 'cncf' && github.event.action != "pull_request"
         uses: docker/login-action@v1
         with:
           registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ github.token }}
       - name: Build for fork
-        if: github.repository_owner != 'cncf'
+        if: github.repository_owner != 'cncf' && github.event.action != "pull_request"
         id: docker_build_fork
         uses: docker/build-push-action@v2
         with:
@@ -152,7 +152,7 @@ jobs:
             ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-latest-dev
             ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version}}-${{ env.VERSION }}
       - name: Build for main
-        if: github.repository_owner == 'cncf'
+        if: github.repository_owner == 'cncf' || github.event.action == 'pull_request'
         id: docker_build_main
         uses: docker/build-push-action@v2
         with:
