--- a/.github/workflows/fork-test.yaml
+++ b/.github/workflows/fork-test.yaml
@@ -11,7 +11,7 @@ defaults:
     shell: bash
 jobs:
   lint_go_code:
-    if: github.repository_owner != 'cncf'
+    if: github.repository_owner != 'podtato-head'
     strategy:
       matrix:
         component: [ "left-leg", "right-leg", "left-arm", "right-arm", "hats", "main" ]
@@ -26,7 +26,7 @@ jobs:
           version: v1.29
           working-directory: podtato-services/${{ matrix.component }}
   build_images:
-    if: github.repository_owner != 'cncf'
+    if: github.repository_owner != 'podtato-head'
     needs: [lint_go_code]
     strategy:
       matrix:
@@ -53,8 +53,9 @@ jobs:
           platforms: linux/amd64
           tags: |
             ${{ env.CONTAINER_REGISTRY }}/${{ github.repository_owner }}/podtato-head/podtato-${{ matrix.component }}:${{ matrix.version }}-latest-dev
+
   test_kubectl_delivery:
-    if: github.repository_owner != 'cncf'
+    if: github.repository_owner != 'podtato-head'
     name: Deliver with kubectl
     needs: [build_images]
     runs-on: ubuntu-latest
@@ -65,8 +66,9 @@ jobs:
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with kubectl
         run: ./delivery/kubectl/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
+
   test_helm_delivery:
-    if: github.repository_owner != 'cncf'
+    if: github.repository_owner != 'podtato-head'
     name: Deliver with Helm
     needs: [build_images]
     runs-on: ubuntu-latest
@@ -77,8 +79,23 @@ jobs:
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with helm
         run: ./delivery/chart/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
+
+  test_kustomize_delivery:
+    if: github.repository_owner != 'podtato-head'
+    name: Deliver with kustomize
+    needs:
+      - build_images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.2.0
+      - name: Test delivery with helm
+        run: ./delivery/kustomize/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
+
   test_ketch_delivery:
-    if: github.repository_owner != 'cncf'
+    if: github.repository_owner != 'podtato-head'
     name: Deliver with ketch
     needs: [build_images]
     runs-on: ubuntu-latest
