--- a/delivery/kustomize/base/kustomization.yaml
+++ b/delivery/kustomize/base/kustomization.yaml
@@ -1,11 +1,34 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Local resource
 resources:
-- deployment.yaml
-- service.yaml
+  - deployment-hats.yaml
+  - deployment-left-arm.yaml
+  - deployment-left-leg.yaml
+  - deployment-main.yaml
+  - deployment-right-arm.yaml
+  - deployment-right-leg.yaml
+  - service-hats.yaml
+  - service-left-arm.yaml
+  - service-left-leg.yaml
+  - service-main.yaml
+  - service-right-arm.yaml
+  - service-right-leg.yaml
+  - serviceaccount.yaml
 
-# Remote resource
-# resources:
-#   - https://raw.githubusercontent.com/cncf/podtato-head/main/delivery/manifest/manifest.yaml
+commonLabels:
+  'app.kubernetes.io/name': 'podtato-head'
+
+# images:
+#   - name: ghcr.io/podtato-head/podtato-main
+#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/podtato-main
+#   - name: ghcr.io/podtato-head/podtato-hats
+#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/podtato-hats
+#   - name: ghcr.io/podtato-head/podtato-right-leg
+#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/podtato-right-leg
+#   - name: ghcr.io/podtato-head/podtato-right-arm
+#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/podtato-right-arm
+#   - name: ghcr.io/podtato-head/podtato-left-leg
+#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/podtato-left-leg
+#   - name: ghcr.io/podtato-head/podtato-lef-arm
+#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/podtato-left-arm
