--- a/delivery/kustomize/overlay/labels.yaml
+++ b/delivery/kustomize/overlay/labels.yaml
@@ -1,10 +1,10 @@
 apiVersion: builtin
 kind: LabelTransformer
 metadata:
-  name: labels
+  name: add-labels
 labels:
-  env: prod
-  instance: helloservice
+  env: production
+  instance: kustomize
 fieldSpecs:
   - path: metadata/labels
     create: true
