--- a/.github/workflows/fork-test.yaml
+++ b/.github/workflows/fork-test.yaml
@@ -2,6 +2,8 @@ name: fork-build-and-test
 on:
   push: {}
   workflow_dispatch: {}
+permissions:
+  packages: write
 env:
   CONTAINER_REGISTRY: ghcr.io
 defaults:
