--- a/.github/workflows/fork-test.yaml
+++ b/.github/workflows/fork-test.yaml
@@ -85,6 +85,12 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.CONTAINER_REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with helm
