--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,7 @@
 
 .DS_Store
 
+/podtato-services-sets/hats/hat
+/podtato-services-sets/arms/arms
+/podtato-services-sets/main/podtato-main
+/podtato-services-sets/legs/legs
