--- a/.github/workflows/fork-test.yaml
+++ b/.github/workflows/fork-test.yaml
@@ -2,6 +2,8 @@ name: fork-build-and-test
 on:
   push: {}
   workflow_dispatch: {}
+permissions:
+  packages: write
 env:
   CONTAINER_REGISTRY: ghcr.io
 defaults:
@@ -75,3 +77,21 @@ jobs:
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with helm
         run: ./delivery/chart/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
+  test_ketch_delivery:
+    if: github.repository_owner != 'cncf'
+    name: Deliver with ketch
+    needs: [build_images]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.CONTAINER_REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.2.0
+      - name: Test delivery with helm
+        run: ./delivery/ketch/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
