--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -120,6 +120,12 @@ jobs:
         with:
           cosign-release: 'v1.0.0'
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Login to GitHub Container Registry
         if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release-*' }}
         uses: docker/login-action@v1
@@ -127,7 +133,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
-
 
       - name: Lint
         uses: golangci/golangci-lint-action@v2
