--- a/.github/workflows/fork-test.yaml
+++ b/.github/workflows/fork-test.yaml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch: {}
 permissions:
   packages: write
+  deployments: write
 env:
   CONTAINER_REGISTRY: ghcr.io
 defaults:
@@ -112,3 +113,22 @@ jobs:
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with helm
         run: ./delivery/ketch/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
+
+  test_flux_delivery:
+    if: github.repository_owner != 'podtato-head'
+    name: Deliver with flux
+    needs: [build_images]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.CONTAINER_REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ github.token }}
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.2.0
+      - name: Test delivery with flux
+        run: ./delivery/flux/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
