create a new build
Signed-off-by: Thomas Schuetz <thomas.schuetz@t-sc.eu>

--- a/podtato-services-small/arms/docker/Dockerfile
+++ b/podtato-services-small/arms/docker/Dockerfile
@@ -27,7 +27,7 @@ WORKDIR /dist
 RUN cp /build/podtatoserver .
 
 # Build a small image
-FROM scratch
+FROM gcr.io/distroless/base-debian10
 
 COPY --from=builder /dist/podtatoserver /
 COPY /static  /static
