--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,15 +7,11 @@ on:
       - 'develop'
       - 'release-*'
 
-permissions:
-  packages: write
 
 env:
   RELEASE_BUILD: 1
   CONTAINER_REGISTRY: ghcr.io
   GITHUB_USER: ${{ github.repository_owner }}
-  # for access to ghcr.io/podtato-head instead of ghcr.io/podtato-head/podtato-head
-  GITHUB_TOKEN: ${{ secrets.CR_PAT }}  
   
 defaults:
   run:
@@ -28,6 +24,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Login to ghcr.io/podtato-head
         uses: docker/login-action@v1
         with:
@@ -36,9 +34,18 @@ jobs:
           password: ${{ secrets.CR_PAT }}
       - name: Install cosign
         uses: sigstore/cosign-installer@main
-      - name: Build images
+
+      - name: Extract custom version for release-* branches
+        run: |
+          if [[ "${BRANCH}" =~ 'release-' ]]; then
+            echo "VERSION=${BRANCH#'release-'}" >> $GITHUB_ENV
+          fi
+
+      - name: Push images
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
+          # for access to ghcr.io/podtato-head instead of ghcr.io/podtato-head/podtato-head
+          GITHUB_TOKEN: ${{ secrets.CR_PAT }}  
         run: make push-images 
 
   test_services:
@@ -49,4 +56,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Test services
+        env:
+          # for access to ghcr.io/podtato-head instead of ghcr.io/podtato-head/podtato-head
+          GITHUB_TOKEN: ${{ secrets.CR_PAT }}  
         run: make test-services
+
+  finalize:
+    if: github.repository_owner == 'podtato-head' && github.ref_name == 'main'
+    needs:
+      - push_images
+      - test_services
+    permissions:
+      contents: write
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Apply new git tag
+        run: |
+          source ./podtato-head/build/version.sh
+          version=$(version_to_use)
+          echo "INFO: will tag commit as: ${version}"
+          git tag -f "${version}"
+          git push --tags
