--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,21 +26,20 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Install requirements
+        run: |
+          ./hack/requirements.sh "/usr/local/bin"
       - name: Login to ghcr.io/podtato-head
         uses: docker/login-action@v1
         with:
           registry: ${{ env.CONTAINER_REGISTRY }}
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
-      - name: Install cosign
-        uses: sigstore/cosign-installer@main
-
       - name: Extract custom version for release-* branches
         run: |
           if [[ "${BRANCH}" =~ 'release-' ]]; then
             echo "VERSION=${BRANCH#'release-'}" >> $GITHUB_ENV
           fi
-
       - name: Push images
         env:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
