--- a/delivery/chart/values.yaml
+++ b/delivery/chart/values.yaml
@@ -9,34 +9,34 @@ images:
   pullSecrets: []
 
 # keep ports in sync with podtato-services/main/pkg/provider.go
-main:
-  repositoryBasename: podtato-main
-  tag: "v1-latest-dev"
+entry:
+  repositoryBasename: entry
+  tag: "0.1.0"
   serviceType: LoadBalancer
   servicePort: 9000
-hats:
-  repositoryBasename: podtato-hats
-  tag: "v1-latest-dev"
+hat:
+  repositoryBasename: hat
+  tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9001
 leftLeg:
-  repositoryBasename: podtato-left-leg
-  tag: "v1-latest-dev"
+  repositoryBasename: left-leg
+  tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9002
 leftArm:
-  repositoryBasename: podtato-left-arm
-  tag: "v1-latest-dev"
+  repositoryBasename: left-arm
+  tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9003
 rightLeg:
-  repositoryBasename: podtato-right-leg
-  tag: "v1-latest-dev"
+  repositoryBasename: right-leg
+  tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9004
 rightArm:
-  repositoryBasename: podtato-right-arm
-  tag: "v1-latest-dev"
+  repositoryBasename: right-arm
+  tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9005
 
