--- a/delivery/chart/templates/deployment-entry.yaml
+++ b/delivery/chart/templates/deployment-entry.yaml
@@ -1,6 +1,6 @@
-{{ $componentName := "hats" }}
-{{ $repoBasename := .Values.hats.repositoryBasename }}
-{{ $repoTag := .Values.hats.tag }}
+{{ $componentName := "entry" }}
+{{ $repoBasename := .Values.entry.repositoryBasename }}
+{{ $repoTag := .Values.entry.tag }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -55,13 +55,13 @@ spec:
             - name: http
               containerPort: 9000
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
